[gd_scene load_steps=4 format=3 uid="uid://q1kbqpo3di3a"]

[ext_resource type="Script" uid="uid://b1y7fbtuvjanh" path="res://algorithms/spacetopology/marchingcubes/LandscapeCaveGenerator.gd" id="1_landscape_cave"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.4, 0.7, 0.3, 1)
roughness = 0.8
emission_enabled = true
emission = Color(0.2, 0.4, 0.1, 1)
emission_energy_multiplier = 0.2

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.05, 0.1, 0.15, 1)
ambient_light_color = Color(0.8, 0.9, 1, 1)
ambient_light_energy = 0.3

[node name="LandscapeCaveDemo" type="Node3D"]
script = ExtResource("1_landscape_cave")
num_chunks = Vector3i(3, 1, 3)
bounds_size = 25.0
viewer_distance = 80.0
num_points_per_axis = 24
terrain_noise_frequency = 0.025
cave_density = 0.4
cave_noise_frequency = 0.018
cave_size_multiplier = 1.8
cave_vertical_bias = 0.3
cave_min_height = -6.0
cave_max_height = 4.0
bounds_gizmo_color = Color(1, 1, 1, 0.5)
terrain_material = SubResource("StandardMaterial3D_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 35, 25, 35)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InfoPanel" type="Panel" parent="UI"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="InfoLabel" type="RichTextLabel" parent="UI/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[b]Landscape Cave Generator[/b]

[color=yellow]Controls:[/color]
• WASD - Move camera
• Mouse - Look around
• R - Regenerate world

[color=green]Features:[/color]
• Unified terrain + caves
• Marching cubes algorithm
• Chunk-based generation
• Real-time collision"
scroll_active = false

[node name="ControlsPanel" type="Panel" parent="UI"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 250.0
grow_vertical = 0

[node name="ControlsContainer" type="VBoxContainer" parent="UI/ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="RegenerateButton" type="Button" parent="UI/ControlsPanel/ControlsContainer"]
layout_mode = 2
text = "Regenerate World (R)"

[node name="HSeparator" type="HSeparator" parent="UI/ControlsPanel/ControlsContainer"]
layout_mode = 2

[node name="CaveDensityLabel" type="Label" parent="UI/ControlsPanel/ControlsContainer"]
layout_mode = 2
text = "Cave Density:"

[node name="CaveDensitySlider" type="HSlider" parent="UI/ControlsPanel/ControlsContainer"]
layout_mode = 2
min_value = 0.1
max_value = 0.8
step = 0.05
value = 0.4

[node name="TerrainHeightLabel" type="Label" parent="UI/ControlsPanel/ControlsContainer"]
layout_mode = 2
text = "Terrain Height:"

[node name="TerrainHeightSlider" type="HSlider" parent="UI/ControlsPanel/ControlsContainer"]
layout_mode = 2
min_value = 2.0
max_value = 15.0
step = 0.5
value = 8.0

[connection signal="pressed" from="UI/ControlsPanel/ControlsContainer/RegenerateButton" to="." method="_on_regenerate_button_pressed"]
[connection signal="value_changed" from="UI/ControlsPanel/ControlsContainer/CaveDensitySlider" to="." method="_on_cave_density_slider_value_changed"]
[connection signal="value_changed" from="UI/ControlsPanel/ControlsContainer/TerrainHeightSlider" to="." method="_on_terrain_height_slider_value_changed"]
